# agentic-brief

./: .env.example  .gitignore  README.md  constraints-openai.txt  pyproject.toml  requirements.txt
src/portfolio_agent/: cli.py  config.py  errors.py  graph.py  llm.py  openai_probe.py  smoke_test.py  state.py
src/portfolio_agent/tools/: crossref.py  http.py  wikipedia.py
