[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-brief"
version = "0.1.0"
description = "A small LangGraph-based, tool-calling agentic workflow with resumable state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "langgraph>=1.2.0,<2.0.0",
  "langgraph-checkpoint-sqlite>=3.1.0,<4.0.0",
  "langchain-core>=1.4.0,<2.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "requests>=2.31.0,<3.0.0",
  "tenacity>=8.2.3,<10.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=1.3.0,<2.0.0"]

[project.scripts]
agentic-brief = "portfolio_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
